tests/m3/hopix/typechecker/bad/recfuns.hopix
fun f (x : int) : int =
  g (x + 1) + 1